.vendor/dislin/examples/ch/dislin.h

void  mpslogo (int nx, int ny, int nsize, const char *copt);
void  mrkclr (int nclr);
void  msgbox (const char *cstr);
void  mshclr (int ic);
void  mshcrv (int n);
void  mylab  (const char *cstr, int itick, const char *cax);
void  myline (const int *nray, int n);
void  mypat  (int iang, int itype, int idens, int icross);
void  mysymb (const double *xray, const double *yray, int n, int isym, 
              int iflag);
void  myvlt  (const double *xr, const double *xg, const double *xb, int n);
void  namdis (int ndis, const char *cax);
void  name   (const char *cstr, const char *cax);
void  namjus (const char *copt, const char *cax);
void  nancrv (const char *copt);
void  neglog (double eps);
void  newmix (void);
void  newpag (void);
int   nlmess (const char *cstr);
int   nlnumb (double x, int ndig);
void  noarln (void);
void  nobar  (void);
void  nobgd  (void);
void  nochek (void);
void  noclip (void);
void  nofill (void);
void  nograf (void);
void  nohide (void);
void  noline (const char *cax);
void  number (double x, int ndig, int nx, int ny);
void  numfmt (const char *copt);
void  numode (const char *cdec, const char *cgrp, 
              const char *cpos, const char *cfix);
int   nwkday (int id, int im, int iy);
int   nxlegn (const char *cbuf);
int   nxpixl (int ix, int iy);
int   nxposn (double x);
int   nylegn (const char *cbuf);
int   nypixl (int ix, int iy);
int   nyposn (double y);
int   nzposn (double z);
int   openfl (const char *cfil, int nu, int irw);
 
void  opnwin (int id);
void  origin (int nx0, int ny0);
void  page   (int nw, int nh);
void  pagera (void);
void  pagfll (int nclr);
void  paghdr (const char *cstr1, const char *cstr2, int iopt, int idir);
void  pagmod (const char *cmod);
void  pagorg (const char *cpos);
void  pagwin (int nw, int nh);
void  patcyc (int index, long ipat);
int   pdfbuf (char *cbuf, int nmax);
void  pdfmod (const char *cmod, const char *ckey);
void  pdfmrk (const char *cstr, const char *copt);
void  penwid (double x);
void  pie    (int nxm, int nym, int nr, double a, double b);
void  piebor (int iclr);
void  pieclr (const int *ic1, const int *ic2, int n);
void  pieexp (void);
void  piegrf (const char *cbuf, int nlin, const double *xray, int nseg);
void  pielab (const char *clab, const char *cpos);
void  pieopt (double xf, double a);
void  pierot (double angle);
void  pietyp (const char *ctyp);
void  pieval (double x, const char *copt);
void  pievec (int ivec, const char *copt);
void  pike3d (double x1, double y1, double z1, 
              double x2, double y2, double z2, double r, int nsk1, int nsk2);
 
void  plat3d (double xm, double ym, double zm, double xl, const char *copt);
 
void  plyfin (const char *cfl, const char *cobj);
void  plyini (const char *copt);
void  pngmod (const char *cmod, const char *ckey);
void  point  (int nx, int ny, int nb, int nh, int ncol);
void  polcrv (const char *cpol);
int   polclp (const double *xray, const double *yray, int n, 
              double *xout, double *yout, int nmax, double xv, 
              const char *cedge);
void  polmod (const char *cpos, const char *cdir);
void  pos2pt (double x, double y, double *xp, double *yp);
void  pos3pt (double x, double y, double z, 
              double *xp, double *yp, double *zp);
void  posbar (const char *copt);
int   posifl (int nu, int nbyte);
 
void  proj3d (const char *cproj);
void  projct (const char *cproj);
void  psfont (const char *cfont);
void  psmeta (const char *cinf, const char *copt);
void  psmode (const char *cmod);
void  pt2pos (double x, double y, double *xp, double *yp);
void  pyra3d (double xm, double ym, double zm, double xl, 
              double h1, double h2, int n);
 
void  qplbar (const double *yray, int n);
void  qplclr (const double *zmat, int n, int m);
void  qplcon (const double *zmat, int n, int m, int nlv);