.vendor/dislin/julia/Dislin.jl


function mpslogo(i1::Int64, i2::Int64, i3::Int64, s::String)
  ccall((:mpslogo, "libdislin_d.so"), Cvoid, (Int32, Int32, Int32, Ptr{UInt8}),
          i1, i2, i3, s)
end

function mrkclr(i::Int64)
  ccall((:mrkclr, "libdislin_d.so"), Cvoid, (Int32,), i)
end

function msgbox(s::String)
  ccall((:msgbox, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function mshclr(i::Int64)
  ccall((:mshclr, "libdislin_d.so"), Cvoid, (Int32,), i)
end

function mshcrv(i::Int64)
  ccall((:mshcrv, "libdislin_d.so"), Cvoid, (Int32,), i)
end

function mylab(s1::String, i::Int64, s2::String)
  ccall((:mylab, "libdislin_d.so"), Cvoid, (Ptr{UInt8}, Int32, Ptr{UInt8}), 
          s1, i, s2)
end

function myline(nray::Vector{Int32}, n::Int64)
  ccall((:myline, "libdislin_d.so"), Cvoid, (Ptr{Int32}, Int32), nray, n)
end

function mypat(i1::Int64, i2::Int64, i3::Int64, i4::Int64)
  ccall((:mypat, "libdislin_d.so"), Cvoid, (Int32, Int32, Int32, Int32), 
           i1, i2, i3, i4)
end

function mysymb(xray::Vector{Float64}, yray::Vector{Float64}, n::Int64,
               isym::Int64, iflag::Int64)
  ccall((:mysymb, "libdislin_d.so"), Cvoid, 
          (Ptr{Float64}, Ptr{Float64}, Int32, Int32, Int32), xray, yray, n,
          isym, iflag)
end

function myvlt(xray::Vector{Float64}, yray::Vector{Float64}, 
                zray::Vector{Float64}, n::Int64)
  ccall((:myvlt, "libdislin_d.so"), Cvoid, (Ptr{Float64}, Ptr{Float64}, 
          Ptr{Float64}, Int32), xray, yray, zray, n)
end

function namdis(i::Int64, s::String)
  ccall((:namdis, "libdislin_d.so"), Cvoid, (Int32, Ptr{UInt8}), i, s)
end

function name(s1::String, s2::String)
  ccall((:name, "libdislin_d.so"), Cvoid, (Ptr{UInt8}, Ptr{UInt8}), s1, s2)
end

function namjus(s1::String, s2::String)
  ccall((:namjus, "libdislin_d.so"), Cvoid, (Ptr{UInt8}, Ptr{UInt8}), s1, s2)
end

function nancrv(s::String)
  ccall((:nancrv, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function neglog(x::Float64)
  ccall((:neglog, "libdislin_d.so"), Cvoid, (Float64,), x)
end

function newmix()
  ccall((:newmix, "libdislin_d.so"), Cvoid, ())
end

function newpag()
  ccall((:newpag, "libdislin_d.so"), Cvoid, ())
end

function nlmess(s::String)
  n = ccall((:nlmess, "libdislin_d.so"), Int32, (Ptr{UInt8},), s)
  return convert(Int64, n)
end

function nlnumb(x::Float64, i::Int64)
  n = ccall((:nlnumb, "libdislin_d.so"), Int32, (Float64, Int32), x, i)
  return convert(Int64, n)
end

function noarln()
  ccall((:noarln, "libdislin_d.so"), Cvoid, ())
end

function nobar()
  ccall((:nobar, "libdislin_d.so"), Cvoid, ())
end

function nobgd()
  ccall((:nobgd, "libdislin_d.so"), Cvoid, ())
end

function nochek()
  ccall((:nochek, "libdislin_d.so"), Cvoid, ())
end

function noclip()
  ccall((:noclip, "libdislin_d.so"), Cvoid, ())
end

function nofill()
  ccall((:nofill, "libdislin_d.so"), Cvoid, ())
end

function nograf()
  ccall((:nograf, "libdislin_d.so"), Cvoid, ())
end

function nohide()
  ccall((:nohide, "libdislin_d.so"), Cvoid, ())
end

function noline(s::String)
  ccall((:noline, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function number(x::Float64, i1::Int64, i2::Int64, i3::Int64)
  ccall((:number, "libdislin_d.so"), Cvoid, (Float64, Int32, Int32, Int32), 
           x, i1, i2, i3)
end

function numfmt(s::String)
  ccall((:numfmt, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function numode(s1::String, s2::String, s3::String, 
                s4::String)
  ccall((:numode, "libdislin_d.so"), Cvoid, (Ptr{UInt8}, Ptr{UInt8}, Ptr{UInt8},
          Ptr{UInt8}), s1, s2, s3, s4)
end

function nwkday(i1::Int64, i2::Int64, i3::Int64)
  n = ccall((:nwkday, "libdislin_d.so"), Int32, (Int32, Int32, Int32), 
              i1, i2, i3)
  return convert(Int64, n)
end

function nxlegn(cbuf::Vector{UInt8})
  n = ccall((:nxlegn, "libdislin_d.so"), Int32, (Ptr{UInt8},), cbuf)
  return convert(Int64, n)
end

function nxpixl(i1::Int64, i2::Int64)
  n = ccall((:nxpixl, "libdislin_d.so"), Int32, (Int32, Int32), i1, i2)
  return convert(Int64, n)
end

function nxposn(x::Float64)
  n = ccall((:nxposn, "libdislin_d.so"), Int32, (Float64, ), x)
  return convert(Int64, n)
end

function nylegn(cbuf::Vector{UInt8})
  n = ccall((:nylegn, "libdislin_d.so"), Int32, (Ptr{UInt8},), cbuf)
  return convert(Int64, n)
end

function nypixl(i1::Int64, i2::Int64)
  n = ccall((:nypixl, "libdislin_d.so"), Int32, (Int32, Int32), i1, i2)
  return convert(Int64, n)
end

function nyposn(x::Float64)
  n = ccall((:nyposn, "libdislin_d.so"), Int32, (Float64, ), x)
  return convert(Int64, n)
end

function nzposn(x::Float64)
  n = ccall((:nzposn, "libdislin_d.so"), Int32, (Float64, ), x)
  return convert(Int64, n)
end

function openfl(s::String, i1::Int64, i2::Int64)
  n = ccall((:openfl, "libdislin_d.so"), Int32, (Ptr{UInt8}, Int32, Int32),
              s, i1, i2)
  return convert(Int64, n)
end

function opnwin(i::Int64)
  ccall((:opnwin, "libdislin_d.so"), Cvoid, (Int32,), i)
end

function origin(i1::Int64, i2::Int64)
  ccall((:origin, "libdislin_d.so"), Cvoid, (Int32, Int32), i1, i2)
end

function page(i1::Int64, i2::Int64)
  ccall((:page, "libdislin_d.so"), Cvoid, (Int32, Int32), i1, i2)
end

function pagera()
  ccall((:pagera, "libdislin_d.so"), Cvoid, ())
end

function pagfll(i::Int64)
  ccall((:pagfll, "libdislin_d.so"), Cvoid, (Int32,), i)
end

function paghdr(s1::String, s2::String, i1::Int64, i2::Int64)
  ccall((:paghdr, "libdislin_d.so"), Cvoid, (Ptr{UInt8}, Ptr{UInt8}, 
          Int32, Int32), s1, s2, i1, i2)
end

function pagmod(s::String)
  ccall((:pagmod, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function pagorg(s::String)
  ccall((:pagorg, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function pagwin(i1::Int64, i2::Int64)
  ccall((:pagwin, "libdislin_d.so"), Cvoid, (Int32, Int32), i1, i2)
end

function patcyc(i1::Int64, i2::Int64)
  ccall((:patcyc, "libdislin_d.so"), Cvoid, (Int32, Int32), i1, i2)
end

function pdfbuf(iray::Vector{UInt8}, nmax::Int64) 
  n = ccall((:pdfbuf, "libdislin_d.so"), Int32, (Ptr{UInt8}, Int32),
          iray, nmax)
  return convert(Int64, n)
end

function pdfmod(s1::String, s2::String)
  ccall((:pdfmod, "libdislin_d.so"), Cvoid, (Ptr{UInt8}, Ptr{UInt8}), s1, s2)
end

function pdfmrk(s1::String, s2::String)
  ccall((:pdfmrk, "libdislin_d.so"), Cvoid, (Ptr{UInt8}, Ptr{UInt8}), s1, s2)
end

function penwid(x::Float64)
  ccall((:penwid, "libdislin_d.so"), Cvoid, (Float64,), x)
end

function pie(i1::Int64, i2::Int64, i3::Int64, x1::Float64, x2::Float64)
  ccall((:pie, "libdislin_d.so"), Cvoid, (Int32, Int32, Int32, Float64, 
           Float64), i1, i2, i3, x1, x2)
end

function piebor(i::Int64)
  ccall((:piebor, "libdislin_d.so"), Cvoid, (Int32,), i)
end

function pieclr(ic1::Vector{Int32}, ic2::Vector{Int32}, n::Int64)
  ccall((:pieclr, "libdislin_d.so"), Cvoid, 
         (Ptr{Int32}, Ptr{Int32}, Int32), ic1, ic2, n)
end

function pieexp()
  ccall((:pieexp, "libdislin_d.so"), Cvoid, ())
end

function piegrf(cbuf::Vector{UInt8}, i1::Int64, xray::Vector{Float64}, 
                i2::Int64)
  ccall((:piegrf, "libdislin_d.so"), Cvoid, 
          (Ptr{UInt8}, Int32, Ptr{Float64}, Int32), cbuf, i1, xray, i2)
end

function pielab(s1::String, s2::String)
  ccall((:pielab, "libdislin_d.so"), Cvoid, (Ptr{UInt8}, Ptr{UInt8}), s1, s2)
end

function pieopt(x1::Float64, x2::Float64)
  ccall((:pieopt, "libdislin_d.so"), Cvoid, (Float64, Float64), x1, x2)
end

function pierot(x::Float64)
  ccall((:pierot, "libdislin_d.so"), Cvoid, (Float64,), x)
end

function pietyp(s::String)
  ccall((:pietyp, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function pieval(x::Float64, s::String)
  ccall((:pieval, "libdislin_d.so"), Cvoid, (Float64, Ptr{UInt8}), x, s)
end

function pievec(i::Int64, s::String)
  ccall((:pievec, "libdislin_d.so"), Cvoid, (Int32, Ptr{UInt8}), i, s)
end

function pike3d(x1::Float64, x2::Float64, x3::Float64, x4::Float64,
           x5::Float64, x6::Float64, x7::Float64, i1::Int64, i2::Int64)
  ccall((:pike3d, "libdislin_d.so"), Cvoid, (Float64, Float64, Float64,
          Float64, Float64, Float64, Float64, Int32, Int32), 
          x1, x2, x3, x4, x5, x6, x7, i1, i2)
end

function plat3d(x1::Float64, x2::Float64, x3::Float64, x4::Float64, 
                s::String)
  ccall((:plat3d, "libdislin_d.so"), Cvoid, (Float64, Float64, Float64, Float64, 
          Ptr{UInt8}), x1, x2, x3, x4, s)
end

function plyfin(s1::String, s2::String)
  ccall((:plyfin, "libdislin_d.so"), Cvoid, (Ptr{UInt8}, Ptr{UInt8}), s1, s2)
end

function plyini(s::String)
  ccall((:plyini, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function pngmod(s1::String, s2::String)
  ccall((:pngmod, "libdislin_d.so"), Cvoid, (Ptr{UInt8}, Ptr{UInt8}), s1, s2)
end

function point(i1::Int64, i2::Int64, i3::Int64, i4::Int64, i5::Int64)
  ccall((:point, "libdislin_d.so"), Cvoid, (Int32, Int32, Int32, Int32, Int32), 
           i1, i2, i3, i4, i5)
end

function polcrv(s::String)
  ccall((:polcrv, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function polclp(xray::Vector{Float64}, yray::Vector{Float64}, n::Int64,
                xout::Vector{Float64},yout::Vector{Float64}, nmax::Int64,
                xv::Float64, cedge::String)
  ccall((:polclp, "libdislin_d.so"), Cvoid, (Ptr{Float64}, Ptr{Float64}, Int32,
          Ptr{Float64}, Ptr{Float64}, Int32, Float64, Ptr{UInt8}), 
          xray, yray, n, xout, yout, nmax, xv, cedge)
end

function polmod(s1::String, s2::String)
  ccall((:polmod, "libdislin_d.so"), Cvoid, (Ptr{UInt8}, Ptr{UInt8}), s1, s2)
end

function pos2pt(x1::Float64, x2::Float64)
  xp1 = Cdouble[0]
  xp2 = Cdouble[0]
  ccall((:pos2pt, "libdislin_d.so"), Cvoid, (Float64, Float64, 
          Ptr{Cdouble}, Ptr{Cdouble}), x1, x2, xp1, xp2)
  return xp1[1], xp2[1]
end

function pos3pt(x1::Float64, x2::Float64, x3::Float64)
  xp1 = Cdouble[0]
  xp2 = Cdouble[0]
  xp3 = Cdouble[0]
  ccall((:pos3pt, "libdislin_d.so"), Cvoid, (Float64, Float64, Float64,
          Ptr{Cdouble}, Ptr{Cdouble}, Ptr{Cdouble}), x1, x2, x3, xp1, xp2, xp3)
  return xp1[1], xp2[1], xp3[1] 
end

function posbar(s::String)
  ccall((:posbar, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function posifl(i1::Int64, i2::Int64)
  n = ccall((:posifl, "libdislin_d.so"), Int32, (Int32, Int32), i1, i2)
  return convert(Int64, n)
end
 
function proj3d(s::String)
  ccall((:proj3d, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function projct(s::String)
  ccall((:projct, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function psfont(s::String)
  ccall((:psfont, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function psmeta(s1::String, s2::String)
  ccall((:psmeta, "libdislin_d.so"), Cvoid, (Ptr{UInt8}, Ptr{UInt8}), s1, s2)
end

function psmode(s::String)
  ccall((:psmode, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function pt2pos(x1::Float64, x2::Float64)
  xp1 = Cdouble[0]
  xp2 = Cdouble[0]
  ccall((:pt2pos, "libdislin_d.so"), Cvoid, (Float64, Float64, 
          Ptr{Cdouble}, Ptr{Cdouble}), x1, x2, xp1, xp2)
  return xp1[1], xp2[1]
end

function pyra3d(x1::Float64, x2::Float64, x3::Float64, x4::Float64,
           x5::Float64, x6::Float64, i::Int64)
  ccall((:pyra3d, "libdislin_d.so"), Cvoid, (Float64, Float64, Float64,
          Float64, Float64, Float64, Int32), x1, x2, x3, x4, x5, x6, i)
end

function qplbar(xray::Vector{Float64}, n::Int64)
  ccall((:qplbar, "libdislin_d.so"), Cvoid, (Ptr{Float64}, Int32), xray, n)
end

function qplclr(zmat::Array{Float64, 2}, n::Int64, m::Int64)
  z = transpose(zmat)
  ccall((:qplclr, "libdislin_d.so"), Cvoid, (Ptr{Float64}, Int32, Int32), z, n, m)
  z = 0  # free z
end

function qplcon(zmat::Array{Float64, 2}, n::Int64, m::Int64, nlv::Int64)
  z = transpose(zmat)
  ccall((:qplcon, "libdislin_d.so"), Cvoid, (Ptr{Float64}, Int32, Int32, Int32), 
           z, n, m, nlv)
  z = 0  # free z
end
